헤더 딤추가/페리모션 추가

--- a/css/intro-web.less
+++ b/css/intro-web.less
@@ -221,10 +221,10 @@ section { .pb(120);
                 }
                 @keyframes obj-rotate {
                   0% {
-                    transform: rotate(-10deg) translateX(200px) rotate(10deg);
+                    transform: rotate(-10deg) translateX(5.4rem) rotate(10deg);
                   }
                   100% {
-                    transform: rotate(350deg) translateX(200px) rotate(-350deg);
+                    transform: rotate(350deg) translateX(5.4rem) rotate(-350deg);
                   }
                 }
               }
