--- a/css/style-web.less
+++ b/css/style-web.less
@@ -13,8 +13,13 @@
 
   .container {
     .wrap { .min-w(1170);
-      header { .wh(100%,140); line-height:normal;
-        .sns-dir { .wh(100%,50); .tc;
+      &.header-open {
+        .wrap-swiper .wrap-pagination,
+        .link-wrap,
+        .top { .z(0); }
+      }
+      header { .wh(100%,140); line-height:normal; .crop;
+        .sns-dir { .wh(100%,50); .tc; .rel; .z(6);
           ul {  .tr; .ib; .w(1170);
             li { .ib; .vat; .h(50); .lh(50); .rel;
               &:before { .cnt; .wh(1,25); .bgc(#fff); .abs; .lt(0,12); }
@@ -29,26 +34,29 @@
             }
           }
         }
-        .h-inner { .wh(1170,90); .mh-c; .tl; .rel;
-          h1 { .pt(0); .lh(90);
+        .h-inner { .wh(1170,90); .mh-c; .tl; .rel; .z(6);
+          h1 { .pt(0); .lh(90); .rel; .z(1);
             .logo { .wh(270,39); .contain('../images/pc/home/LOGO_White.png'); .ib; .vam; }
           }
-          .menu-list { .wh(600,90); .ml(245);
+          .menu-list { .wh(600,90); .ml(245); .rel; .z(1);
             .btn { .fs(23,90); .medium; .c(#fff); .p(0,20); .-box; .ib; .vam;
               &.on, &:hover { .c(#04B0E2)!important; .rel;
                 &:after { .cnt; width:calc(100% - 40px); .h(3); .bgc(#04B0E2); .abs; .lb(20,0); }
               }
             }
           }
-          .menu { .wh(45,45); .contain('../images/pc/home/ico-menu-w.png'); .rt(0,23); }
+          .menu { .wh(45,45); .contain('../images/pc/home/ico-menu-w.png'); .rt(0,23); .z(1); }
         }
+        .dim { .wh(100%,100vh); .fix; .lt; background: rgba(40, 40, 40, 0.3); backdrop-filter: blur(6px); .z(5); pointer-events: none; .hide; }
         &.open { .bgc(#fff); box-shadow: 0 4px 15px rgba(84, 107, 129, 0.1);
           .sns-dir { background: linear-gradient(90deg, #04B0E2 1.64%, #00C6D2 100%); }
-          .h-inner {
+          .h-inner { .bgc(#fff);
+            &:after { .cnt; .wh(100vw,100%); .abs; .lt(50%,0); .ml(-50vw); .bgc(#fff); }
             h1 .logo { .contain('../images/pc/home/LOGO_color.png'); }
             .menu-list .btn { .c(#282828); }
             .menu { .contain('../images/pc/home/ico-menu.png'); }
           }
+          .dim { .block; }
         }
       }
       nav { .abs; .w(100%); height:auto; .pb(15); .-box; .bgc(#fff); .lt(0,140);
@@ -69,7 +77,7 @@
       }
 
 
-      .gnb-wrap { .wf; .fix; .lt(0,140); .tc; .bgc(#fff); .z(10);
+      .gnb-wrap { .wf; .abs; .lt(0,140); .tc; .bgc(#fff); .z(10);
         .gnb-inner { visibility: hidden; .abs; .lt; .wf; box-shadow: 0 2px 10px rgba(40, 40, 40, 0.15);
           .gnb-depth2 { .bgc(#F1F1F1);
             .dep-inner { .w(1170); .mh-c; .tl;
@@ -80,7 +88,7 @@
               }
             }
           }
-          .depth2-preview { .wf; .bgc(#fff); .crop;
+          .depth2-preview { .wf; .bgc(#fafafa); .crop;
             .dep-inner { .w(1170); .mh-c; .tl; .flex; .space-between; transform:translateY(-100px); .o(0); transition: transform 0.4s, opacity 0.7s; .ease-out;
               .pre-cnt { .ib; .vat; .p(27,0,30); .-box; .min-w(350); .rel;
                 .dir-btn { .abs; .lt; .f; .z(2); }
@@ -221,7 +229,7 @@
 
       footer {
         .content-inner { .w(1170); .mh-c; .rel; }
-        .consortium { .fs(18,40); .lt(50%,65); .ml(620);
+        .consortium { .fs(18,40); .lt(50%,65); .ml(620); .z(2);
           i { .ml(7); }
         }
         .sponsors { .p(20,0); .wh(1170,105); .mh-c; .tl;
@@ -238,7 +246,7 @@
               &.inner8-slide8 { .contain('../images/pc/home/ft-spon8.png'); }
             }
           }
-          .swiper-btn-inner8 { .wh(25,25); .lt(0,40); .w(1170); .mh-c;
+          .swiper-btn-inner8 { .wh(25,25); .lt(0,40); .mh-c;
             &.inner8-prev { .contain('../images/pc/home/ico-inner8-prev.png'); .l(96); }
             &.inner8-next { .contain('../images/pc/home/ico-inner8-next.png'); .l(131); }
           }
@@ -386,7 +394,35 @@
                     b { .regular; .c(#00C6D2); }
                   }
                 }
-                .talent { .mt(0); .wh(502,483); .contain('../images/pc/home/talent.png'); .ib; .vam; .ml(148); }
+                .talent { .mt(0); .wh(502,483); .ib; .vam; .ml(148); background: none;
+                  .ferris { .f; .pt(58); .-box;
+                    .ferris-inner { .wh(368,368); border: 1px solid rgba(4,176,226,0.5); .-box; .br(50%); .mh-c; .block!important; .rel;
+                      .wheel-wrap { .wh(368,368); background: none; .abs;
+                        .wheel { .wh(368,368); .br(50%); }
+                      }
+                      .circle { .wh(264,278); .abs; .lt(52,45); .tc; .contain('../images/pc/home/main-frr-cir.png'); .pt(102); .-box;
+                        span { .fs(26,36); .c(#fff); .semi-bold; .ib; }
+                      }
+                      .objs { .wh(368,368); .abs; .br(50%); .z(1);
+                        div { .fs(20,112); .tc; .c(#04B0E2); .bold; .-a(#fff,4px); .-box; .br(50%); .bgc(#F1F1F1); .wh(120,120); .abs; .lt(50%,50%); .m(-60,0,0,-60); animation: ferri-rotate 25s infinite linear;
+                          &.obj1 { animation-delay: 0s; }
+                          &.obj2 { animation-delay: -5s; }
+                          &.obj3 { animation-delay: -10s; }
+                          &.obj4 { animation-delay: -15s; }
+                          &.obj5 { animation-delay: -20s; }
+                        }
+                        @keyframes ferri-rotate {
+                          0% {
+                            transform: rotate(-10deg) translateX(5.5rem) rotate(10deg);
+                          }
+                          100% {
+                            transform: rotate(350deg) translateX(5.5rem) rotate(-350deg);
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
                 .partners { .p(40,35,80); .rel; .mt(64);
                   .txt { .fs(18,28); .pl(0); }
                   .logo-wrap { .mt(27); .w(1100); .crop;
@@ -436,9 +472,18 @@
                       &.txt { .fs(16,25); .ml(0); }
                     }
                     .vid-select { .f; .abs; .lt; .z(2); }
-                    &.sel1:after { .contain('../images/pc/home/bio1.png'); }
-                    &.sel2:after { .contain('../images/pc/home/bio2.png'); }
-                    &.sel3:after { .contain('../images/pc/home/bio3.png'); }
+                    &.sel1 {
+                      &:after { .contain('../images/pc/home/bio1.png'); }
+                      &.active:after { .contain('../images/pc/home/bio1-on.png'); }
+                    }
+                    &.sel2 {
+                      &:after { .contain('../images/pc/home/bio2.png'); }
+                      &.active:after { .contain('../images/pc/home/bio2-on.png'); }
+                    }
+                    &.sel3 {
+                      &:after { .contain('../images/pc/home/bio3.png'); }
+                      &.active:after { .contain('../images/pc/home/bio3-on.png'); }
+                    }
                   }
                 }
               }
@@ -526,10 +571,10 @@
           }
         }
         .wrap-pagination { .fix; .lt(40,358); .tl; transform: none;
-          .swiper-pagination-bullet { .fs(14,25); .semi-bold; .c(#fff); .rel; .block; .m(0,0,21,0); .wh(160,25); background: transparent; .o(1);
+          .swiper-pagination-bullet { .fs(14,25); .semi-bold; .c(#fff); .rel; .block; .m(0,0,21,0); .wh(160,25); background: transparent; .o(1); text-shadow: 0 2px 3px rgba(0, 0, 0, 0.25);
             &:last-child { .hide; }
             i { .wh(12,12); .bgc(#fff); .br(50%); .ib; .rel; .mr(19); }
-            &.swiper-pagination-bullet-active { .c(#00E8F6)!important; .bold;
+            &.swiper-pagination-bullet-active { .c(#00E8F6)!important; .bold; text-shadow: 0 2px 3px rgba(167, 182, 183, 0.5);
               i { .bgc(#00E8F6)!important;
                 &:after { .cnt; .wh(26,26); .-a(#00E8F6)!important; .br(50%); .abs; .m(-8,-8); }
               }
@@ -659,7 +704,8 @@
   }
 }
 @media (max-width: 1600px) and (hover:hover) {
-  .container .wrap .wrap-swiper .swiper-wrapper .wrap-slide.slide8 footer .consortium { left:auto; .r(0); }
+  .container .wrap .wrap-swiper .swiper-wrapper .wrap-slide.slide8 footer .consortium,
+  .container .wrap footer .consortium { left:auto; .r(0); }
 }
 @media (max-width: 1400px) and (hover:hover) {
   .container .wrap .wrap-swiper .wrap-pagination { .hide!important; }
